[gd_scene load_steps=5 format=2]

[ext_resource path="res://projectiles/bullet/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://projectiles/bullet/script/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://resources/assets/Audio/Noise_Attack.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.09902

[node name="CurseBullet" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 0 )
scale = Vector2( 0.296296, 0.228571 )
animation = "curse_bullet"
flip_h = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 0 )
shape = SubResource( 1 )

[node name="BulletHitbox" parent="." index="2"]
collision_layer = 16
collision_mask = 65
hitbox_name = "Curse"

[node name="CollisionShape2D" parent="BulletHitbox" index="0"]
position = Vector2( 0, 0 )
rotation = 1.5708

[node name="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 3 )

[connection signal="body_entered" from="BulletHitbox" to="." method="_on_BulletHitbox_body_entered"]

[editable path="BulletHitbox"]
